--- a/NLPipe_data_simple.ipynb
+++ b/NLPipe_data_simple.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9fb462b6-b6f1-4954-9c3e-d36e3562353e",
    "metadata": {
     "colab": {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7acebed1-da05-4a5f-953b-f7a0d2f08197",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "5a1f11cc-d448-4950-88fd-b082f52d494d",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0e10abcd-6581-40c1-88c9-9447db7e55e9",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "530013a0-b12d-4aa8-9ae2-40f727a9dbf0",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "061d00f5-0fee-4c66-a208-b9ce44340103",
    "metadata": {},
    "outputs": [
@@ -371,9 +371,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████| 50000/50000 [00:18<00:00, 2772.74it/s]\n",
+      "100%|███████████████████████████████████| 50000/50000 [00:18<00:00, 2763.02it/s]\n",
       "[nltk_data] Downloading package stopwords to /home/magni/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -387,7 +387,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████| 50000/50000 [00:09<00:00, 5467.41it/s]\n"
+      "100%|███████████████████████████████████| 50000/50000 [00:09<00:00, 5320.61it/s]\n"
      ]
     },
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "eb07d7b2-9147-4717-aac6-37a1e7679e8a",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving file as /home/magni/ML_Root/project_root/NLP-Pipeline/testDataProcParams.pkl.gz\n"
+      "Saving file as /home/magni/ML_Root/project_root/magritte/testDataProcParams.pkl.gz\n"
      ]
     }
    ],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b930a126-0d48-4c5f-bca2-235af5f2c7a4",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9fa1c0d1-7a8c-40ba-af75-0935b906d2ee",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving file as /home/magni/ML_Root/project_root/NLP-Pipeline/testDataPackage.pkl.gz\n"
+      "Saving file as /home/magni/ML_Root/project_root/magritte/testDataPackage.pkl.gz\n"
      ]
     }
    ],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "40c9dffe-eb0d-4a44-8ce8-0f3016f6dd15",
    "metadata": {},
    "outputs": [
@@ -621,8 +621,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0804575b-6bd3-475f-9f71-ab95a90d1855",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "762df8d3-9438-406e-8070-ba02b6994514",
    "metadata": {},
    "outputs": [],
    "source": []
