Colab demo - update
Added requirements files (main plus one specific to demo files.
Updated demo ipynb files

--- a/demo_colab/NLPipe_data_simple_colab.ipynb
+++ b/demo_colab/NLPipe_data_simple_colab.ipynb
@@ -20,19 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4db81e25-c76b-4c49-a155-9f4e2f1288e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.1.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Remove existing magritte repo if present\n",
+    "!rm -rf magritte\n",
+    "\n",
     "# Clone repo for utilities\n",
     "!git clone https://github.com/mvmagni/magritte"
    ]
@@ -45,9 +40,6 @@
    "outputs": [],
    "source": [
     "# Install and import required packages for data.\n",
-    "\n",
-    "#!pip install clean-text\n",
-    "#!pip install unidecode\n",
     "!pip install -r magritte/requirements_data.txt\n",
     "\n",
     "\n",
