--- a/demo_colab/NLPipe_demo_simple_colab.ipynb
+++ b/demo_colab/NLPipe_demo_simple_colab.ipynb
@@ -39,10 +39,10 @@
    "outputs": [],
    "source": [
     "# Install and import required packages for data.\n",
-    "!pip install -r magritte/requirements.txt\n",
+    "!pip install -r magritte/requirements.txt --progress\n",
     "\n",
     "# Install any requirements specific to the demo\n",
-    "!pip install -r magritte/demo_colab/requirements_demo.txt\n",
+    "!pip install -r magritte/demo_colab/requirements_demo.txt --quiet\n",
     "\n",
     "\n",
     "from cleantext import clean"
@@ -86,8 +86,8 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "PROJECT_DIR = f'{os.getcwd()}'\n",
-    "DEMO_DATA_DIR = f'{os.getcwd()}/data'\n",
+    "PROJECT_DIR = f'{os.getcwd()}/magritte'\n",
+    "DEMO_DATA_DIR = f'{PROJECT_DIR}/data'\n",
     "DEMO_DATA_FILE = f'{DEMO_DATA_DIR}/IMDB Dataset.csv.gz'\n",
     "UTILITIES_DIR = f'{PROJECT_DIR}/utilities'\n",
     "\n",
