--- a/NLPipe_data.ipynb
+++ b/NLPipe_data.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9179e5b1-4800-440a-b9ea-13b2ccc80027",
    "metadata": {
     "colab": {
@@ -48,7 +48,7 @@
     "import os\n",
     "\n",
     "PROJECT_DIR = f'{os.getcwd()}'\n",
-    "DEMO_DATA_DIR = f'{os.getcwd()}/data'\n",
+    "DEMO_DATA_DIR = f'{PROJECT_DIR}/data'\n",
     "DEMO_DATA_FILE = f'{DEMO_DATA_DIR}/IMDB Dataset.csv.gz'\n",
     "UTILITIES_DIR = f'{PROJECT_DIR}/utilities'\n",
     "\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ff95f343-98bf-4002-803a-2982d62b744a",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "7e2d9c8e-93c8-4794-b634-86bab0e6147a",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ee986bd4-0e87-4a80-9bf4-537196951056",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "061d00f5-0fee-4c66-a208-b9ce44340103",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c3c04abb-8426-41cd-910b-cae55c951eef",
    "metadata": {},
    "outputs": [
@@ -211,25 +211,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    DataPackage summary\n",
-      "    Attributes:\n",
-      "    ---> uniqueColumn: uuid\n",
-      "    ---> dataColumn: review\n",
-      "    ---> targetColumn: sentiment\n",
-      "    Original Data:\n",
-      "    ---> original data shape: (50000, 3)\n",
-      "    Working Data:\n",
-      "    ---> working data shape: (50000, 3)\n",
-      "    Process:\n",
-      "    ---> isCleaned: False\n",
-      "    ---> isStopWorded: False\n",
-      "    ---> isBalanced: False\n",
-      "    ---> isEncoded: False\n",
-      "    ---> isTrainTestSplit: False\n",
-      "    Data:\n",
-      "    ---> isOrigDataLoaded: True\n",
-      "    ---> isTrainDataLoaded: False\n",
-      "    ---> isTestDataLoaded: False\n"
+      "DataPackage summary\n",
+      "Attributes:\n",
+      "---> uniqueColumn: uuid\n",
+      "---> dataColumn: review\n",
+      "---> targetColumn: sentiment\n",
+      "Original Data:\n",
+      "---> original data shape: (50000, 3)\n",
+      "Working Data:\n",
+      "---> working data shape: (50000, 3)\n",
+      "Process:\n",
+      "---> isProcessed: False\n",
+      "---> isCleaned: False\n",
+      "---> isStopWorded: False\n",
+      "---> isBalanced: False\n",
+      "---> isEncoded: False\n",
+      "---> isTrainTestSplit: False\n",
+      "Data:\n",
+      "---> isOrigDataLoaded: True\n",
+      "---> isTrainDataLoaded: False\n",
+      "---> isTestDataLoaded: False\n",
+      "\n"
      ]
     }
    ],
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "eb07d7b2-9147-4717-aac6-37a1e7679e8a",
    "metadata": {},
    "outputs": [
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "c0226298-ceea-43e1-9c0b-a25d28e28564",
    "metadata": {},
    "outputs": [
@@ -334,7 +336,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40000/40000 [00:14<00:00, 2751.25it/s]\n"
+      "100%|███████████████████████████████████| 40000/40000 [00:14<00:00, 2736.96it/s]\n"
      ]
     }
    ],
@@ -345,10 +347,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "75d83414-7abb-45a0-98bf-6e410c320b93",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /home/magni/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -360,7 +370,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40000/40000 [00:07<00:00, 5201.25it/s]\n"
+      "100%|███████████████████████████████████| 40000/40000 [00:07<00:00, 5379.35it/s]\n"
      ]
     }
    ],
@@ -370,17 +380,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "9fa1c0d1-7a8c-40ba-af75-0935b906d2ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Encoding to TF-IDF with max_features=100\n",
+      "Encoding completed. Feature list:\n",
+      "['10', 'acting', 'actors', 'actually', 'all', 'also', 'and', 'another', 'around', 'back', 'bad', 'best', 'better', 'big', 'br', 'can', 'cast', 'character', 'characters', 'could', 'director', 'end', 'even', 'ever', 'every', 'film', 'films', 'find', 'first', 'funny', 'get', 'go', 'going', 'good', 'great', 'he', 'horror', 'in', 'it', 'know', 'life', 'like', 'little', 'look', 'lot', 'love', 'made', 'make', 'makes', 'man', 'many', 'movie', 'movies', 'much', 'never', 'new', 'nothing', 'old', 'one', 'part', 'people', 'plot', 'pretty', 'quite', 'real', 'really', 'say', 'scene', 'scenes', 'see', 'seems', 'seen', 'show', 'something', 'still', 'story', 'take', 'that', 'the', 'there', 'thing', 'things', 'think', 'this', 'though', 'thought', 'time', 'two', 'us', 've', 'want', 'watch', 'watching', 'way', 'well', 'work', 'world', 'would', 'years', 'young']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "myDP.process_TFIDF(max_features=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "40c9dffe-eb0d-4a44-8ce8-0f3016f6dd15",
    "metadata": {},
    "outputs": [
@@ -405,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "8858885c-57ce-48f6-b362-5263e9d37fb2",
    "metadata": {},
    "outputs": [
@@ -413,25 +435,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    DataPackage summary\n",
-      "    Attributes:\n",
-      "    ---> uniqueColumn: uuid\n",
-      "    ---> dataColumn: review\n",
-      "    ---> targetColumn: sentiment\n",
-      "    Original Data:\n",
-      "    ---> original data shape: (50000, 3)\n",
-      "    Working Data:\n",
-      "    ---> working data shape: (40000, 102)\n",
-      "    Process:\n",
-      "    ---> isCleaned: True\n",
-      "    ---> isStopWorded: True\n",
-      "    ---> isBalanced: True\n",
-      "    ---> isEncoded: True\n",
-      "    ---> isTrainTestSplit: True\n",
-      "    Data:\n",
-      "    ---> isOrigDataLoaded: True\n",
-      "    ---> isTrainDataLoaded: True\n",
-      "    ---> isTestDataLoaded: True\n"
+      "DataPackage summary\n",
+      "Attributes:\n",
+      "---> uniqueColumn: uuid\n",
+      "---> dataColumn: review\n",
+      "---> targetColumn: sentiment\n",
+      "Original Data:\n",
+      "---> original data shape: (50000, 3)\n",
+      "Working Data:\n",
+      "---> working data shape: (40000, 102)\n",
+      "Process:\n",
+      "---> isProcessed: False\n",
+      "---> isCleaned: True\n",
+      "---> isStopWorded: True\n",
+      "---> isBalanced: True\n",
+      "---> isEncoded: True\n",
+      "---> isTrainTestSplit: True\n",
+      "Data:\n",
+      "---> isOrigDataLoaded: True\n",
+      "---> isTrainDataLoaded: True\n",
+      "---> isTestDataLoaded: True\n",
+      "\n"
      ]
     }
    ],
