--- a/NLPipe_data_simple.ipynb
+++ b/NLPipe_data_simple.ipynb
@@ -48,7 +48,7 @@
     "import os\n",
     "\n",
     "PROJECT_DIR = f'{os.getcwd()}'\n",
-    "DEMO_DATA_DIR = f'{os.getcwd()}/data'\n",
+    "DEMO_DATA_DIR = f'{PROJECT_DIR}/data'\n",
     "DEMO_DATA_FILE = f'{DEMO_DATA_DIR}/IMDB Dataset.csv.gz'\n",
     "UTILITIES_DIR = f'{PROJECT_DIR}/utilities'\n",
     "\n",
@@ -371,9 +371,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████| 50000/50000 [00:18<00:00, 2763.02it/s]\n",
-      "[nltk_data] Downloading package stopwords to /home/magni/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "100%|███████████████████████████████████| 50000/50000 [00:18<00:00, 2749.70it/s]\n"
      ]
     },
     {
@@ -387,7 +385,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████| 50000/50000 [00:09<00:00, 5320.61it/s]\n"
+      "[nltk_data] Downloading package stopwords to /home/magni/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "100%|███████████████████████████████████| 50000/50000 [00:09<00:00, 5414.87it/s]\n"
      ]
     },
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0804575b-6bd3-475f-9f71-ab95a90d1855",
    "metadata": {},
    "outputs": [],
