--- a/demo_colab/NLPipe_data_simple_colab.ipynb
+++ b/demo_colab/NLPipe_data_simple_colab.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# Install and import required packages for data.\n",
-    "!pip install -r magritte/requirements_data.txt\n",
+    "!pip install -r magritte/requirements_data.txt --quiet\n",
     "\n",
     "\n",
     "from cleantext import clean"
