--- a/demo_colab/NLPipe_demo_simple_colab.ipynb
+++ b/demo_colab/NLPipe_demo_simple_colab.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# Install and import required packages for data.\n",
-    "!pip install -r magritte/requirements.txt --progress\n",
+    "!pip install -r magritte/requirements.txt --quiet\n",
     "\n",
     "# Install any requirements specific to the demo\n",
     "!pip install -r magritte/demo_colab/requirements_demo.txt --quiet\n",
