--- a/NLPipe_demo_simple.ipynb
+++ b/NLPipe_demo_simple.ipynb
@@ -38624,7 +38624,87 @@
       "---> isModelLearningCurveCreated: False\n",
       "---> isUntrainedModelLoaded: True\n",
       "RandomForestClassifier(max_depth=2, n_estimators=5, n_jobs=-1)\n",
-      "\n"
+      "\n",
+      "[CV] END ..................., score=(train=0.986, test=0.695) total time=   8.7s\n",
+      "[CV] END ..................., score=(train=0.987, test=0.698) total time=   2.3s\n",
+      "[CV] END ..................., score=(train=0.833, test=0.682) total time=   0.3s\n",
+      "[CV] END ..................., score=(train=0.711, test=0.707) total time=   1.2s\n",
+      "[CV] END ..................., score=(train=0.651, test=0.651) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.943, test=0.701) total time=   9.2s\n",
+      "[CV] END ..................., score=(train=0.789, test=0.695) total time=   0.4s\n",
+      "[CV] END ..................., score=(train=0.731, test=0.700) total time=   0.5s\n",
+      "[CV] END ..................., score=(train=0.727, test=0.705) total time=   0.9s\n",
+      "[CV] END ..................., score=(train=0.648, test=0.638) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.944, test=0.709) total time=   8.9s\n",
+      "[CV] END ..................., score=(train=0.874, test=0.714) total time=   2.3s\n",
+      "[CV] END ..................., score=(train=0.782, test=0.694) total time=   0.4s\n",
+      "[CV] END ..................., score=(train=0.722, test=0.701) total time=   1.0s\n",
+      "[CV] END ..................., score=(train=0.651, test=0.648) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.988, test=0.691) total time=   9.1s\n",
+      "[CV] END ..................., score=(train=0.874, test=0.679) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.876, test=0.679) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.730, test=0.692) total time=   1.0s\n",
+      "[CV] END ..................., score=(train=0.656, test=0.654) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.827, test=0.725) total time=   9.1s\n",
+      "[CV] END ..................., score=(train=0.835, test=0.684) total time=   0.3s\n",
+      "[CV] END ..................., score=(train=0.791, test=0.704) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.712, test=0.702) total time=   1.2s\n",
+      "[CV] END ..................., score=(train=0.644, test=0.613) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.828, test=0.724) total time=   9.9s\n",
+      "[CV] END ..................., score=(train=0.762, test=0.700) total time=   0.5s\n",
+      "[CV] END ..................., score=(train=0.711, test=0.705) total time=   0.9s\n",
+      "[CV] END ..................., score=(train=0.634, test=0.624) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.870, test=0.715) total time=   9.7s\n",
+      "[CV] END ..................., score=(train=0.830, test=0.677) total time=   0.3s\n",
+      "[CV] END ..................., score=(train=0.777, test=0.700) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.713, test=0.705) total time=   1.1s\n",
+      "[CV] END ..................., score=(train=0.665, test=0.650) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.874, test=0.723) total time=   9.5s\n",
+      "[CV] END ..................., score=(train=0.820, test=0.676) total time=   0.4s\n",
+      "[CV] END ..................., score=(train=0.713, test=0.700) total time=   1.0s\n",
+      "[CV] END ..................., score=(train=0.631, test=0.628) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.874, test=0.722) total time=   9.8s\n",
+      "[CV] END ..................., score=(train=0.862, test=0.675) total time=   0.3s\n",
+      "[CV] END ..................., score=(train=0.821, test=0.695) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.729, test=0.701) total time=   0.9s\n",
+      "[CV] END ..................., score=(train=0.671, test=0.658) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.938, test=0.704) total time=   9.3s\n",
+      "[CV] END ..................., score=(train=0.870, test=0.671) total time=   0.4s\n",
+      "[CV] END ..................., score=(train=0.737, test=0.695) total time=   0.4s\n",
+      "[CV] END ..................., score=(train=0.734, test=0.698) total time=   1.0s\n",
+      "[CV] END ..................., score=(train=0.662, test=0.656) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.984, test=0.705) total time=   8.9s\n",
+      "[CV] END ..................., score=(train=0.823, test=0.728) total time=   2.2s\n",
+      "[CV] END ..................., score=(train=0.770, test=0.700) total time=   0.4s\n",
+      "[CV] END ..................., score=(train=0.714, test=0.702) total time=   0.7s\n",
+      "[CV] END ..................., score=(train=0.712, test=0.706) total time=   0.5s\n",
+      "[CV] END ..................., score=(train=0.649, test=0.646) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.873, test=0.707) total time=   9.5s\n",
+      "[CV] END ..................., score=(train=0.769, test=0.697) total time=   0.4s\n",
+      "[CV] END ..................., score=(train=0.714, test=0.703) total time=   0.6s\n",
+      "[CV] END ..................., score=(train=0.711, test=0.706) total time=   0.7s\n",
+      "[CV] END ..................., score=(train=0.650, test=0.647) total time=   0.3s\n",
+      "[CV] END ..................., score=(train=0.828, test=0.723) total time=   9.4s\n",
+      "[CV] END ..................., score=(train=0.794, test=0.691) total time=   0.4s\n",
+      "[CV] END ..................., score=(train=0.723, test=0.696) total time=   0.9s\n",
+      "[CV] END ..................., score=(train=0.661, test=0.647) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.618, test=0.598) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.985, test=0.697) total time=   8.8s\n",
+      "[CV] END ..................., score=(train=0.947, test=0.705) total time=   2.3s\n",
+      "[CV] END ..................., score=(train=0.866, test=0.675) total time=   0.3s\n",
+      "[CV] END ..................., score=(train=0.713, test=0.708) total time=   0.9s\n",
+      "[CV] END ..................., score=(train=0.650, test=0.634) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.678, test=0.674) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.829, test=0.729) total time=   9.7s\n",
+      "[CV] END ..................., score=(train=0.790, test=0.694) total time=   0.4s\n",
+      "[CV] END ..................., score=(train=0.736, test=0.693) total time=   0.9s\n",
+      "[CV] END ..................., score=(train=0.664, test=0.666) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.662, test=0.664) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.936, test=0.710) total time=   9.1s\n",
+      "[CV] END ..................., score=(train=0.771, test=0.700) total time=   0.4s\n",
+      "[CV] END ..................., score=(train=0.735, test=0.700) total time=   1.0s\n",
+      "[CV] END ..................., score=(train=0.653, test=0.625) total time=   0.2s\n",
+      "[CV] END ..................., score=(train=0.658, test=0.652) total time=   0.2s\n"
      ]
     }
    ],
