Colab demo update
Updated colab demo notebook for untrained

--- a/demo_colab/NLPipe_demo_simple_colab.ipynb
+++ b/demo_colab/NLPipe_demo_simple_colab.ipynb
@@ -262,7 +262,7 @@
    "source": [
     "# Create the classifier used for the first Experiment\n",
     "from xgboost import XGBClassifier\n",
-    "classifier1 = XGBClassifier(eval_metric='mlogloss', \n",
+    "untrained_model_1 = XGBClassifier(eval_metric='mlogloss', \n",
     "                            tree_method='gpu_hist',\n",
     "                            use_label_encoder=False,\n",
     "                            max_depth=5,\n",
@@ -279,7 +279,7 @@
     "# Create the Experiment Manager \n",
     "myEM = ExperimentManager(project_name='NLPipe',\n",
     "                         experiment_name='XGB depth:5 est:100',\n",
-    "                         classifier=classifier1,\n",
+    "                         untrained_model=untrained_model_1,\n",
     "                         data_package=myDP)\n",
     "\n",
     "                         "
@@ -295,12 +295,12 @@
     "# Add another experiment\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "classifier2 = RandomForestClassifier(n_jobs=-1,\n",
+    "untrained_model_2 = RandomForestClassifier(n_jobs=-1,\n",
     "                                     max_depth=10,\n",
     "                                     n_estimators=10)\n",
     "\n",
     "myEM.add_experiment(experiment_name='RF depth:10 est:10',\n",
-    "                    classifier=classifier2)"
+    "                    untrained_model=untrained_model_2)"
    ]
   },
   {
@@ -311,14 +311,14 @@
    "outputs": [],
    "source": [
     "# Add another experiment\n",
-    "classifier3 = XGBClassifier(eval_metric='mlogloss', \n",
+    "untrained_model_3 = XGBClassifier(eval_metric='mlogloss', \n",
     "                           tree_method='gpu_hist',\n",
     "                           use_label_encoder=False,\n",
     "                           max_depth=2,\n",
     "                           n_estimators=20)\n",
     "\n",
     "myEM.add_experiment(experiment_name='XGB depth:2 est:20',\n",
-    "                    classifier=classifier3)"
+    "                    untrained_model=untrained_model_3)"
    ]
   },
   {
@@ -329,12 +329,12 @@
    "outputs": [],
    "source": [
     "# Add another experiment\n",
-    "classifier4 = RandomForestClassifier(n_jobs=-1,\n",
+    "untrained_model_4 = RandomForestClassifier(n_jobs=-1,\n",
     "                                     max_depth=2,\n",
     "                                     n_estimators=5)\n",
     "\n",
     "myEM.add_experiment(experiment_name='RF depth:2 est:5',\n",
-    "                    classifier=classifier4)"
+    "                    untrained_model=untrained_model_4)"
    ]
   },
   {
