Performance and structure
Added in performance metrics for training, prediction, and processing.
Cleaned up charts and training output

--- a/demo_colab/NLPipe_demo_simple_colab.ipynb
+++ b/demo_colab/NLPipe_demo_simple_colab.ipynb
@@ -19,10 +19,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "af122d89-2bf4-476c-b0cd-b60ad2e5556e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'magritte'...\n",
+      "remote: Enumerating objects: 101, done.\u001b[K\n",
+      "remote: Counting objects: 100% (101/101), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (79/79), done.\u001b[K\n",
+      "remote: Total 101 (delta 44), reused 68 (delta 15), pack-reused 0\u001b[K\n",
+      "Receiving objects: 100% (101/101), 29.06 MiB | 5.08 MiB/s, done.\n",
+      "Resolving deltas: 100% (44/44), done.\n"
+     ]
+    }
+   ],
    "source": [
     "# Remove existing magritte repo if present\n",
     "!rm -rf magritte\n",
@@ -33,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "96e5e42d-53f9-4a1b-817a-48851f956da0",
    "metadata": {},
    "outputs": [],
@@ -61,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "92ab6524-6e25-4fe4-9116-e6d6f9769cc9",
    "metadata": {
     "colab": {
@@ -97,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "86ea03bb-e5c3-41e2-ba13-3790a44dfe03",
    "metadata": {},
    "outputs": [],
@@ -119,10 +133,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cddc0286-9e5f-4484-afbc-fb1b4a1d637d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data shape: (50000, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>One of the other reviewers has mentioned that ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A wonderful little production. &lt;br /&gt;&lt;br /&gt;The...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I thought this was a wonderful way to spend ti...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Basically there's a family where a little boy ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Petter Mattei's \"Love in the Time of Money\" is...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review  sentiment\n",
+       "0  One of the other reviewers has mentioned that ...          1\n",
+       "1  A wonderful little production. <br /><br />The...          1\n",
+       "2  I thought this was a wonderful way to spend ti...          1\n",
+       "3  Basically there's a family where a little boy ...          0\n",
+       "4  Petter Mattei's \"Love in the Time of Money\" is...          1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Loading the IMDB Dataset\n",
     "ORIG_DF = pd.read_csv(DEMO_DATA_FILE, compression='gzip')\n",
@@ -136,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a4071fc1-3dfb-4509-973b-3b0469d6eefb",
    "metadata": {},
    "outputs": [],
@@ -158,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "78061dc9-d6e1-4c0d-b1cb-c8e03312795b",
    "metadata": {},
    "outputs": [],
@@ -219,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ac17f647-979b-427d-beb8-621cda3aac72",
    "metadata": {},
    "outputs": [],
@@ -245,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b930a126-0d48-4c5f-bca2-235af5f2c7a4",
    "metadata": {},
    "outputs": [],
@@ -255,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fa6f5c5c-d687-46c5-852e-b50a82efa39b",
    "metadata": {},
    "outputs": [],
@@ -271,14 +360,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c0226298-ceea-43e1-9c0b-a25d28e28564",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'experiment_method'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_138997/921208803.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m                          \u001b[0mexperiment_method\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'supervised'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                          \u001b[0muntrained_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muntrained_model_1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m                          data_package=myDP)\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'experiment_method'"
+     ]
+    }
+   ],
    "source": [
     "# Create the Experiment Manager \n",
     "myEM = ExperimentManager(project_name='NLPipe',\n",
     "                         experiment_name='XGB depth:5 est:100',\n",
+    "                         experiment_method='supervised',\n",
     "                         untrained_model=untrained_model_1,\n",
     "                         data_package=myDP)\n",
     "\n",
@@ -300,6 +402,7 @@
     "                                     n_estimators=10)\n",
     "\n",
     "myEM.add_experiment(experiment_name='RF depth:10 est:10',\n",
+    "                    experiment_method='supervised',\n",
     "                    untrained_model=untrained_model_2)"
    ]
   },
@@ -318,6 +421,7 @@
     "                           n_estimators=20)\n",
     "\n",
     "myEM.add_experiment(experiment_name='XGB depth:2 est:20',\n",
+    "                    experiment_method='supervised',\n",
     "                    untrained_model=untrained_model_3)"
    ]
   },
@@ -334,6 +438,7 @@
     "                                     n_estimators=5)\n",
     "\n",
     "myEM.add_experiment(experiment_name='RF depth:2 est:5',\n",
+    "                    experiment_method='supervised',\n",
     "                    untrained_model=untrained_model_4)"
    ]
   },
