Fix colab demo file
Environment initialization had location errors. Fixed.

--- a/demo_colab/NLPipe_demo_simple_colab.ipynb
+++ b/demo_colab/NLPipe_demo_simple_colab.ipynb
@@ -87,9 +87,9 @@
     "import os\n",
     "\n",
     "PROJECT_DIR = f'{os.getcwd()}'\n",
-    "DEMO_DATA_DIR = f'{PROJECT_DIR}/../data'\n",
+    "DEMO_DATA_DIR = f'{PROJECT_DIR}/magritte/data'\n",
     "DEMO_DATA_FILE = f'{DEMO_DATA_DIR}/IMDB Dataset.csv.gz'\n",
-    "UTILITIES_DIR = f'{PROJECT_DIR}/../utilities'\n",
+    "UTILITIES_DIR = f'{PROJECT_DIR}/utilities'\n",
     "\n",
     "# Add the UTILITY_DIR to the path to import files\n",
     "sys.path.append(UTILITIES_DIR)"
