--- a/demo_colab/NLPipe_demo_simple_colab.ipynb
+++ b/demo_colab/NLPipe_demo_simple_colab.ipynb
@@ -89,7 +89,7 @@
     "PROJECT_DIR = f'{os.getcwd()}'\n",
     "DEMO_DATA_DIR = f'{PROJECT_DIR}/magritte/data'\n",
     "DEMO_DATA_FILE = f'{DEMO_DATA_DIR}/IMDB Dataset.csv.gz'\n",
-    "UTILITIES_DIR = f'{PROJECT_DIR}/utilities'\n",
+    "UTILITIES_DIR = f'{PROJECT_DIR}/magritte/utilities'\n",
     "\n",
     "# Add the UTILITY_DIR to the path to import files\n",
     "sys.path.append(UTILITIES_DIR)"
