--- a/demo/NLPipe_data_simple.ipynb
+++ b/demo/NLPipe_data_simple.ipynb
@@ -376,9 +376,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████| 50000/50000 [00:18<00:00, 2717.53it/s]\n",
-      "[nltk_data] Downloading package stopwords to /home/magni/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "100%|███████████████████████████████████| 50000/50000 [00:18<00:00, 2731.36it/s]\n"
      ]
     },
     {
@@ -392,7 +390,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████| 50000/50000 [00:09<00:00, 5144.96it/s]\n"
+      "[nltk_data] Downloading package stopwords to /home/magni/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "100%|███████████████████████████████████| 50000/50000 [00:09<00:00, 5412.80it/s]\n"
      ]
     },
     {
@@ -653,9 +653,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML1010_env2",
+   "display_name": "magritte",
    "language": "python",
-   "name": "ml1010_env2"
+   "name": "magritte"
   },
   "language_info": {
    "codemirror_mode": {
