--- a/demo_colab/NLPipe_demo_simple_colab.ipynb
+++ b/demo_colab/NLPipe_demo_simple_colab.ipynb
@@ -38893,9 +38893,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML1010_env2",
+   "display_name": "magritte",
    "language": "python",
-   "name": "ml1010_env2"
+   "name": "magritte"
   },
   "language_info": {
    "codemirror_mode": {
